fixed tooltip sticking out below the window edge

--- a/css/loading.css
+++ b/css/loading.css
@@ -5,7 +5,7 @@
     top:      0;
     width:    100%;
     height:   100%;
-    display:  none;
+    display:  block;
 }
 
 
